Text Invisible Bug Fixed

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h6 {
 }
 
 p {
-    color: #fff;
+    color: #000;
     font-size: 20px;
     line-height: 1.5;
     font-weight: 400;
